fix sign in banner bottom margin being too big

--- a/server/static/sass/_sign_in.scss
+++ b/server/static/sass/_sign_in.scss
@@ -58,7 +58,7 @@
 }
 
 #sign-in-banner-container {
-  height: 60px;
+  height: 90px;
   display: none;
 
   // TODO(david): Don't hardcode this
